--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         </g>
         </g>
         </svg>
+        <audio src="audio/dogsBark.wav"></audio>
+        <button></button>
         
     <img  src="" alt="">
     <img  src="" alt=""> 
@@ -55,5 +57,6 @@
     <img  src="" alt="">
     <img  src="" alt="">
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
 <script src="script.js"></script>
 </html>
