--- a/index.html
+++ b/index.html
@@ -46,16 +46,21 @@
         </g>
         </svg>
         <audio src="audio/dogsBark.wav"></audio>
-        <button></button>
         
-    <img  src="" alt="">
-    <img  src="" alt=""> 
-    <img  src="" alt="">
-    <img  src="" alt="">
-    <img  src="" alt="">
-    <img  src="" alt=""> 
-    <img  src="" alt="">
-    <img  src="" alt="">
+    <section class="collegeContainer">
+        <div class="photoCollege">
+            <img class="dog1" src="dog1.webp" alt="">
+            <img class="dog2" src="dog2.png" alt=""> 
+            <img class="dog3" src="dog3.jpg" alt="">
+            <img class="dog4" src="dog4.jpg" alt="">
+            <img class="dog5" src="dog5.jpg" alt="">
+            <img class="dog6" src="dog6.jpg" alt=""> 
+            <img class="dog7" src="dog7.jpg" alt="">
+            <img class="dog8" src="dog8.jpg" alt="">
+        </div>
+    </section>
+
+    <button></button>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
 <script src="script.js"></script>
