Getting values from DataList

--- a/index.html
+++ b/index.html
@@ -60,7 +60,183 @@
         </div>
     </section>
 
-    <button></button>
+    <label for="breeds">Breeds</label>
+    <input type="text" id="breeds" list="dogBreed">
+    <datalist id="dogBreed">
+        <option value="Affenpinscher"> 
+        <option value="African">
+        <option value="Airedale"> 
+        <option value="Akita">
+        <option value="Appenzeller">
+        <option value="Australian"> 
+        <option value="Shepherd Australian"> 
+        <option value="Basenji"> 
+        <option value="Beagle"> 
+        <option value="Bluetick"> 
+        <option value="Borzoi"> 
+        <option value="Bouvier"> 
+        <option value="Boxer"> 
+        <option value="Brabancon"> 
+        <option value="Briard"> 
+        <option value="Buhund"> 
+        <option value="Norwegian Buhund"> 
+        <option value="Bulldog">
+        <option value="Boston Bulldog"> 
+        <option value="English Bulldog"> 
+        <option value="French Bulldog"> 
+        <option value="Bullterrier"> 
+        <option value="Staffordshire Bullterrier"> 
+        <option value="Cairn"> 
+        <option value="Cattledog"> 
+        <option value="Australian Cattledog"> 
+        <option value="Chihuahua"> 
+        <option value="Chow"> 
+        <option value="Clumber"> 
+        <option value="Cockapoo"> 
+        <option value="Collie"> 
+        <option value="Border Collie"> 
+        <option value="Coonhound"> 
+        <option value="Corgi"> 
+        <option value="Cardigan Corgi"> 
+        <option value="Cotondetulear"> 
+        <option value="Dachshund"> 
+        <option value="Dalmatian"> 
+        <option value="Dane"> 
+        <option value="Great Dane"> 
+        <option value="Deerhound"> 
+        <option value="Scottish Deerhound"> 
+        <option value="Dholer"> 
+        <option value="Dingo"> 
+        <option value="Doberman"> 
+        <option value="Elkhound"> 
+        <option value="Norwegian Elkhound"> 
+        <option value="Entlebucher"> 
+        <option value="Eskimo"> 
+        <option value="Finnish">  
+        <option value="Lapphund Finnish"> 
+        <option value="Frise"> 
+        <option value="Bichon Frise"> 
+        <option value="Germanshepherd"> 
+        <option value="Greyhound"> 
+        <option value="Italian Greyhound"> 
+        <option value="Groenendael"> 
+        <option value="Havanese"> 
+        <option value="Hound"> 
+        <option value="Afghan Hound"> 
+        <option value="Basset Hound"> 
+        <option value="Blood Hound"> 
+        <option value="English Hound"> 
+        <option value="Ibizan Hound"> 
+        <option value="Plott Hound"> 
+        <option value="Walker Hound"> 
+        <option value="Husky"> 
+        <option value="Keeshond"> 
+        <option value="Kelpie"> 
+        <option value="Komondor"> 
+        <option value="Kuvasz"> 
+        <option value="Labradoodle"> 
+        <option value="Labrador"> 
+        <option value="Leonberg"> 
+        <option value="Lhasa"> 
+        <option value="Malamute"> 
+        <option value="Malinois"> 
+        <option value="Maltese">
+        <option value="Mastiff">
+        <option value="Bull Mastiff">
+        <option value="English Mastiff">
+        <option value="Tibetan Mastiff">
+        <option value="Mexicanhairless">
+        <option value="Mix">
+        <option value="Mountain">
+        <option value="Bernese Mountain">
+        <option value="Swiss Mountain">
+        <option value="Newfoundland">
+        <option value="Otterhound">
+        <option value="Ovcharka">
+        <option value="Caucasian Ovcharka">
+        <option value="Papillon">
+        <option value="Pekinese">
+        <option value="Pembroke">
+        <option value="Pinscher">
+        <option value="Miniature Pinscher">
+        <option value="Pitbull">
+        <option value="Pointer">
+        <option value="German Pointer">
+        <option value="Germanlonghair Pointer">
+        <option value="Pomeranian">
+        <option value="Poodle">
+        <option value="Miniature Poodle">
+        <option value="Standard Poodle">
+        <option value="Toy Poodle">
+        <option value="Pug">
+        <option value="Puggle">
+        <option value="Pyrenees">
+        <option value="Redbone">
+        <option value="Retriever">
+        <option value="Chesapeake Retriever">
+        <option value="Curly Retriever">
+        <option value="Flatcoated Retriever">
+        <option value="Golden Retriever">
+        <option value="Ridgeback">
+        <option value="Rhodesian Ridgeback">
+        <option value="Rottweiler">
+        <option value="Saluki">
+        <option value="Samoyed">
+        <option value="Schipperke">
+        <option value="Schnauzer">
+        <option value="Giant Schnauzer">
+        <option value="Miniature Schnauzer">
+        <option value="Setter">
+        <option value="English Setter">
+        <option value="Gordon Setter">
+        <option value="Irish Setter">
+        <option value="Sheepdog">
+        <option value="English Sheepdog">
+        <option value="Shetland Sheepdog">
+        <option value="Shiba">
+        <option value="Shihtzu">
+        <option value="Spaniel">
+        <option value="Blenheim Spaniel">
+        <option value="Brittany Spaniel">
+        <option value="Cocker Spaniel">
+        <option value="Irish Spaniel">
+        <option value="Japanese Spaniel">
+        <option value="Sussex Spaniel">
+        <option value="Welsh Spaniel">
+        <option value="Springer">
+        <option value="English Springer">
+        <option value="Stbernard">
+        <option value="Terrier">
+        <option value="American Terrier">
+        <option value="Australian Terrier">
+        <option value="Bedlington Terrier">
+        <option value="Border Terrier">
+        <option value="Dandie Terrier">
+        <option value="Fox Terrier">
+        <option value="Irish Terrier">
+        <option value="Kerryblue Terrier">
+        <option value="Lakeland Terrier">
+        <option value="Norfolk Terrier">
+        <option value="Norwich Terrier">
+        <option value="Patterdale Terrier">
+        <option value="Russell Terrier">
+        <option value="Scottish Terrier">
+        <option value="Sealyham Terrier">
+        <option value="Silky Terrier">
+        <option value="Tibetan Terrier">
+        <option value="Toy Terrier">
+        <option value="Westhighland Terrier">
+        <option value="Wheaten Terrier">
+        <option value="Yorkshire Terrier">
+        <option value="Vizsla">
+        <option value="Waterdog">
+        <option value="Spanish Waterdog">
+        <option value="Weimaraner">
+        <option value="Whippetn">
+        <option value="Wolfhound">
+        <option value="Irish Wolfhound">        
+    </datalist>
+    <button>Press Here</button>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
 <script src="script.js"></script>
