bottom removed / label msg added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </section>
 
-    <label for="breeds">Breeds</label>
+    <label for="breeds">Type a breed &#9759</label>
     <input type="text" id="breeds" list="dogBreed">
     <datalist id="dogBreed">
         <option value="Affenpinscher"> 
@@ -236,7 +236,7 @@
         <option value="Wolfhound">
         <option value="Irish Wolfhound">        
     </datalist>
-    <button>Press Here</button>
+   
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
 <script src="script.js"></script>
