--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 110 90%22><text y=%22.9em%22 font-size=%2290%22>🐶</text></svg>">
+    <title>Woof Woof</title>
 </head>
 <body>
     <svg viewBox="0 0 584 480" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -60,7 +61,7 @@
         </div>
     </section>
 
-    <label for="breeds">Type a breed &#9759</label>
+    <label for="breeds">Type a breed <span>&#9759</span></label>
     <input type="text" id="breeds" list="dogBreed">
     <datalist id="dogBreed">
         <option value="Affenpinscher"> 
