--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <img class="dog8" src="dog8.jpg" alt="">
         </div>
     </section>
-
+    <section class="form">
     <label for="breeds">Type a breed <span>&#9759</span></label>
     <input type="text" id="breeds" list="dogBreed">
     <datalist id="dogBreed">
@@ -237,6 +237,7 @@
         <option value="Wolfhound">
         <option value="Irish Wolfhound">        
     </datalist>
+    </section>
    
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
