--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         
     <section class="collegeContainer">
         <div class="photoCollege">
-            <img class="dog1" src="dog1.webp" alt="">
-            <img class="dog2" src="dog2.png" alt=""> 
-            <img class="dog3" src="dog3.jpg" alt="">
-            <img class="dog4" src="dog4.jpg" alt="">
-            <img class="dog5" src="dog5.jpg" alt="">
-            <img class="dog6" src="dog6.jpg" alt=""> 
-            <img class="dog7" src="dog7.jpg" alt="">
-            <img class="dog8" src="dog8.jpg" alt="">
+            <img class="dog1" src="img/blueBone.png" alt="">
+            <img class="dog2" src="img/blueBone.png" alt=""> 
+            <img class="dog3" src="img/blueBone.png" alt="">
+            <img class="dog4" src="img/blueBone.png" alt="">
+            <img class="dog5" src="img/blueBone.png" alt="">
+            <img class="dog6" src="img/blueBone.png" alt=""> 
+            <img class="dog7" src="img/blueBone.png" alt="">
+            <img class="dog8" src="img/blueBone.png" alt="">
         </div>
     </section>
     <section class="form">
